HOD Change Log


Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-3376: Provide a mechanism to detect and handle violations to 
    resource manager limits. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-3151. Improves error messages when reporting failures due to 
    incorrect parameters passed to HOD. (Vinod Kumar Vavilapalli via ddas)

 
  BUG FIXES

    HADOOP-2961: Avoids unnecessary checks for some configuration parameters
    related to service configuration. (Vinod Kumar Vavilapalli via ddas)

Release 0.17.0 - Unreleased

  INCOMPATIBLE CHANGES

    HADOOP-3137. Modified build script to pick up version automatically
    from Hadoop build. (yhemanth)

  IMPROVEMENTS

    HADOOP-2775.  Adds unit test framework for HOD.
    (Vinod Kumar Vavilapalli via ddas).

    HADOOP-2848. [HOD]hod -o list and deallocate works even after deleting
    the cluster directory. (Hemanth Yamijala via ddas)

    HADOOP-2899. [HOD] Cleans up hdfs:///mapredsystem directory after
    deallocation. (Hemanth Yamijala via ddas)

    HADOOP-2796. Enables distinguishing exit codes from user code vis-a-vis
    HOD's exit code. (Hemanth Yamijala via ddas)

    HADOOP-2947. HOD redirects stdout and stderr of daemons to assist
    getting stack traces. (Vinod Kumar Vavilapalli via yhemanth)

  BUG FIXES

    HADOOP-2924. Fixes an address problem to do with TaskTracker binding
    to an address. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2970. Fixes a problem to do with Wrong class definition for
    hodlib/Hod/hod.py for Python < 2.5.1.
    (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2783. Fixes a problem to do with import in
    hod/hodlib/Common/xmlrpc.py. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2936. Fixes HOD in a way that it generates hdfs://host:port on the
    client side configs. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2983. [HOD] Fixes the problem - local_fqdn() returns None when